# BAT

paper/: .gitignore  README.md
paper/assets/code/c/: compiler.c  input.txt  lex_structure.l  output.txt  tokens.txt  yacc_structure.y
paper/assets/code/mps/: DSColor.datatype  DSColorLiteral.concept  DSColorLiteral.editor  DSColorLiteral.generator  DSColorLiteral.typesystem  DSExpression.transformations  input.pc  json.nodefactories  output.json  structure.concept
paper/assets/img/diagrams/: ard_player_c_ast.mmd  ard_player_mps_ast.mmd  ard_player_mps_ast_1.mmd  ard_player_mps_ast_2.mmd  ard_player_mps_structure.mmd  designflow_new.mmd  designflow_old.mmd  mps.mmd  top_down_parser.mmd
paper/scripts/: mermaid.bat  mermaid.sh
paper/src/: acronyms.tex  appendix.tex  design_system.tex  diskussion.tex  einleitung.tex  evaluation-des-prototypen.tex  fazit.tex  grundlagen.tex  literatur.tex  main.bib  main.tex  title.tex  toc.tex  umsetzung-eines-komplexen-beispiels-in-mps.tex  umsetzung-eines-komplexen-beispiels.tex  vergleich-anhand-eines-einfachen-biespiels.tex  vergleich-der-tool-sets-anhand-eines-einfachen-beispiels.tex
projects/ARD.Player.classic/: .gitignore  CMakeLists.txt  ast.c  ast.h  bison.conf  input.txt  main.c  main.l  main.y  symbol_table.c  symbol_table.h
projects/ARD.Player/.mps/: modules.xml
projects/ARD.Player/devkits/ARD.Player/: ARD.Player.devkit
projects/ARD.Player/languages/ARD.Player.Model.sandbox/: ARD.Player.Model.sandbox.msd
projects/DesignSystemCreator/.mps/: modules.xml
projects/json/.mps/: modules.xml
(+521 files in other folders)
